--- a/sass/ui/form/_core.scss
+++ b/sass/ui/form/_core.scss
@@ -13,8 +13,8 @@
 @import 'checkbox/core';
 
 
-/** Toggler (.toggler) */
-@import 'toggler/core';
+/** Switch (.switch) */
+@import 'switch/core';
 
 
 /** Select (.select) */
