--- a/sass/basics/_variables.scss
+++ b/sass/basics/_variables.scss
@@ -1,3 +1,16 @@
+// Default borders
+$border-radius-name: 'br' !default;
+$border-radius-class: ".#{$border-radius-name}" !default;
+$border-radius-scale: (0, 0.25, 0.5, 1, 2, 1000) !default;
+$border-radius: scale-rem(nth($border-radius-scale, 2)) !default;
+
+$border-width-name: 'bw' !default;
+$border-width-class: ".#{$border-width-name}" !default;
+$border-width-scale: (0, 1/16, 2/16, 4/16, 6/16, 10/16) !default;
+$border-width: scale-rem(nth($border-width-scale, 2)) !default;
+
+$border-style: solid !default;
+
 // Disabled links
 $disabled-link-color: $dark-border !default;
 
