--- a/sass/ui/avatar/_layout.scss
+++ b/sass/ui/avatar/_layout.scss
@@ -3,15 +3,37 @@
     @extend %#{$flex-name};
     @extend %#{$flex-name}--y-center;
     @extend %#{$flex-name}--x-center;
-    @extend %#{$avatar-name};
-    position:relative;
-    z-index:1;
+    width: map-get($avatar-size, $DEFAULT-AVATAR-SIZE);
+    height: map-get($avatar-size, $DEFAULT-AVATAR-SIZE);
+    border-radius: $avatar-border-radius;
+    position: relative;
+    overflow: hidden;
 
     img {
-      min-height: 100%;
-      min-width: 100%;
+      width: 100%;
+      height: 100%;
       object-fit: cover;
-      border-radius: $avatar-border-radius;
+    }
+
+    &.avatar--square {
+      img {
+        height: 100%;
+        width: 100%;
+      }
+    }
+
+    &.avatar--landscape {
+      img {
+        height: 100%;
+        width: auto;
+      }
+    }
+
+    &.avatar--portrait {
+      img {
+        height: auto;
+        width: 100%;
+      }
     }
   }
 
@@ -20,4 +42,7 @@
       @extend %#{$avatar-name}--#{$size};
     }
   }
+
+  @include harden-border-radius($avatar-name);
+  @include extend-flex($selectors: ($avatar-class,));
 }
