--- a/sass/ui/nav/drawer/_variables.scss
+++ b/sass/ui/nav/drawer/_variables.scss
@@ -1,8 +1,5 @@
 $drawer-name: drawer;
 $drawer-class: '.#{$drawer-name}';
 
-$drawer-background: $lightest-grey;
-$drawer-border-color: $border;
-$drawer-border-width: $border-width;
-$drawer-border-style: $border-style;
+$drawer-background: $white;
 $drawer-box-shadow: 0 0 6px $dark-border;
